# libft

./: .gitignore  Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_stchr.c  ft_strchr.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c  libft.h
tests/: CMakeLists.txt  bzero_tests.cpp  calloc_tests.cpp  isalnum_tests.cpp  isalpha_tests.cpp  isascii_tests.cpp  isdigit_tests.cpp  isprint_tests.cpp  main.cpp  memchr_tests.cpp  memcmp_tests.cpp  memcpy_tests.cpp  memmove_tests.cpp  memset_tests.cpp  strchr_tests.cpp  strlcpy_tests.cpp  strlen_tests.cpp  strncmp_tests.cpp  strrchr_tests.cpp  tolower_tests.cpp  toupper_tests.cpp
